# PipelineParallelism

./: README.md  pyproject.toml
.github/workflows/: lint.yml
src/: monolith.py
